# ArbitrageMonitor

./: .dockerignore  .env.example  .gitignore  API_IMPLEMENTATION_SUMMARY.md  API_TESTS_SUMMARY.md  CACHE_IMPLEMENTATION_SUMMARY.md  DATA_RETENTION_IMPLEMENTATION_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  MAIN_ENTRY_POINT_SUMMARY.md  METRICS_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  RUN_APPLICATION.md  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_TESTS_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  test_metrics_integration.py  verify_api.py  verify_api_tests.py  verify_cache.py  verify_chain_monitor.py  verify_main.py  verify_metrics.py  verify_pool_scanner.py  verify_profit_calculator.py  verify_retention.py  verify_small_trader_analysis.py  verify_websocket.py
.kiro/hooks/: python-docs-sync.kiro.hook
examples/: README.md  cache_usage.py  websocket_client.py
src/: __init__.py
src/analytics/: __init__.py  stats_aggregator.py
src/api/: __init__.py  app.py  websocket.py
src/cache/: __init__.py  manager.py
src/chains/: __init__.py  bsc_connector.py  connector.py  polygon_connector.py
src/config/: __init__.py  models.py
src/database/: README.md  __init__.py  manager.py  models.py  schema.py
tests/: __init__.py  test_api.py  test_cache.py  test_chain_connector.py  test_chain_monitor.py  test_config.py  test_database.py  test_database_models.py  test_logging.py  test_metrics.py  test_pool_scanner.py  test_profit_calculator.py  test_retention.py  test_transaction_analyzer.py  test_viability_analysis.py  test_websocket.py
(+21 files in other folders)
